--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -49,3 +49,55 @@
         }
     }
 }
+
+.home-header-banner {
+    background: url('../../assets/images/bookingcare-cover-4.jpg');
+    height: 485px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding: 15px 0;
+
+    .title1 {
+        text-align: center;
+        font-size: 30px;
+        color: #fff;
+        text-shadow: 1px 1px 1px #333;
+        margin-bottom: 5px;
+        margin-top: 30px;
+    }
+
+    .title2 {
+        text-align: center;
+        font-size: 30px;
+        color: #fff;
+        text-shadow: 1px 1px 1px #333;
+    }
+
+    .search {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        padding: 10px;
+        width: fit-content;
+        border-radius: 25px;
+        background-color: #f7d800;
+        margin-top: 15px;
+        i {
+            margin: 0 5px;
+        }
+        input {
+            
+            height: 30px;
+            width: 360px;
+            background: transparent;
+            border: none;
+            outline: none;
+        }
+    }
+
+    .options {
+
+    }
+}
