--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -34,6 +34,10 @@
     &.section-outstanding-doctor {
         background: #f5f5f5;
     }
+    &.section-about {
+        display: block;
+        height: 500px !important;
+    }
     
     .section-body {
         .section-customize {
@@ -66,7 +70,6 @@
 
 .section-share {
     height: 330px;
-    
     display: flex;
     align-items: center;
 
@@ -116,6 +119,41 @@
         .customize-border {
             border: 1px solid green;
             padding: 20px;
+        }
+    }
+}
+
+.home-footer {
+    text-align: center;
+    a {
+        text-decoration: none;
+    }
+
+}
+
+.section-about {
+    width: 1140px;
+    margin: 0 auto;
+    
+    .section-about-header {
+        padding-bottom: 20px;
+        font-size: 20px;
+        font-weight: 600;
+    }
+
+    .section-about-content {
+        display: flex;
+        gap: 15px;
+        width: 100%;
+        align-items: center;
+        .content-left {
+            width: 50%;
+        }
+        .content-right {
+            width: 50%;
+            p {
+                text-align: justify;
+            }
         }
     }
 }
