--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -33,6 +33,7 @@
     }
     &.section-outstanding-doctor {
         background: #f5f5f5;
+        height: 380px !important;
     }
     &.section-about {
         display: block;
@@ -82,7 +83,7 @@
         .section-header {
             height: 60px;
             margin-bottom: 30px;
-            
+            margin-top: 10px;
         }
 
         .title-section {
@@ -100,9 +101,72 @@
             color: black;
             cursor: pointer;
             text-transform: uppercase;
+            position: relative;
+            text-decoration: none;
             &:hover {
-                color: #fff;
-                background: #f7d800;
+                color: #49bce2;
+                background: #49bce2;
+                box-shadow: 0 0 16px #49bce2;
+                i {
+                    &::before {
+                        left: 0%;
+                        transform: translateX(-50%) rotate(45deg);
+                        // box-shadow: 40px 39px #49bce2;
+                    }
+                    &::after {
+                        left: 100%;
+                        transform: translateX(-50%) rotate(-45deg);
+                        // box-shadow: 40px -39px #49bce2;
+                    }
+                }
+            }
+            &::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                inset: 2px;
+                background: #ebebeb;
+            }
+            &::after {
+                content: '';
+                position: absolute;
+                bottom: 0;
+                inset: 2px;
+                background: #ebebeb;
+                
+            }
+            span {
+                position: relative;
+                z-index: 1;
+            }
+            i {
+                position: absolute;
+                inset: 0;
+                display: block;
+                &::before {
+                    content: '';
+                    position: absolute;
+                    top: -6px;
+                    left: 100%;
+                    transform: translateX(-50%);
+                    width: 10px;
+                    height: 10px;
+                    background: #f5f5f5;
+                    border: 2px solid #49bce2;
+                    transition: 0.5s;
+                }
+                &::after {
+                    content: '';
+                    position: absolute;
+                    bottom: -6px;
+                    left: 0;
+                    transform: translateX(-50%);
+                    width: 10px;
+                    height: 10px;
+                    background: #f5f5f5;
+                    border: 2px solid #49bce2;
+                    transition: 0.5s;
+                }
             }
         }
     }
@@ -112,7 +176,7 @@
     .outer-bg {
         display: flex;
         justify-content: center;
-        margin-bottom: 10px;
+        margin-bottom: 6px;
     }
     .section-customize {
         padding: 5px;
